[package]
name = "questions-api"
version = "0.1.0"
edition = "2024"

[dependencies]
poem = "3"
poem-openapi = { version = "5", features = ["swagger-ui"] }
serde = "1.0.228"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
strum = "0.28.0"
strum_macros = "0.28.0"
question-generator = { version = "0.1.0", path = "../bst-question-generator", features = ["poem"] }
